--- a/src/assets/scss/_override.scss
+++ b/src/assets/scss/_override.scss
@@ -1,5 +1,7 @@
 @import 'slick/slick-theme';
 @import 'slick/slick';
+@import 'override/typo';
+
 @import 'override/header';
 @import 'override/slider';
 @import 'override/gallery';
