--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,15 +1,15 @@
 <section class="gallery">
   <div class="row large-up-3 medium-up-2 small-up-1">
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>AUBETTE 1928</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>CABINET DES ESTAMPES & DES DESSINS</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE ALSACIEN</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE ARCHÉOLOGIQUE</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE DES ARTS DÉCORATIFS</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE D'ART MODERNE & CONTEMPORAIN</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE DES BEAUX-ARTS</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE HISTORIQUE</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE DE L'OEUVRE-NOTRE-DAME</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE TOMI UNGERER</figcaption></a></figure>
-    <figure class="columns"><a href="#"><img src="http://placehold.it/410x230"><figcaption>MUSÉE ZOOLOGIQUE</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/1.png"><figcaption>AUBETTE 1928</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/2.png"><figcaption>CABINET DES ESTAMPES & DES DESSINS</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/3.png"><figcaption>MUSÉE ALSACIEN</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/4.png"><figcaption>MUSÉE ARCHÉOLOGIQUE</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/5.png"><figcaption>MUSÉE DES ARTS DÉCORATIFS</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/6.png"><figcaption>MUSÉE D'ART MODERNE & CONTEMPORAIN</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/7.png"><figcaption>MUSÉE DES BEAUX-ARTS</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/8.png"><figcaption>MUSÉE HISTORIQUE</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/9.png"><figcaption>MUSÉE DE L'OEUVRE-NOTRE-DAME</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/10.png"><figcaption>MUSÉE TOMI UNGERER</figcaption></a></figure>
+    <figure class="columns"><a href="#"><img src="assets/img/11.png"><figcaption>MUSÉE ZOOLOGIQUE</figcaption></a></figure>
   </div>
 </section>
