--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,11 @@
 <header>
   <div class="row">
-    <div class="large-3 medium-4 small-12 columns"><h1 class="text-center"><img src="assets/img/logo.png" alt="Musées de Strasbourg"></h1></div>
-    <nav class="large-9 medium-8 small-12 columns">
+    <div class="large-4 medium-4 small-12 columns"><h1 class="text-center"><img src="assets/img/logo.png" alt="Musées de Strasbourg"></h1></div>
+    <nav class="large-8 medium-8 small-12 columns">
       <ul class="no-bullet">
-        <li><a href="#">One</a><a href="#"><img src="assets/img/loupe.png" alt=""></a><a href="#">FR</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
+        <li ><a href="#">ACTUALITÉS/AGENDA</a><a href="#"><img src="assets/img/loupe.png" class="float-right" alt=""></a><a href="#"class="float-right">FR</a></li>
+        <li><a href="#">MUSÉES</a></li>
+        <li><a href="#">INFORMATIONS</a></li>
       </ul>
     </nav>
   </div>
