--- a/src/assets/scss/override/_slider.scss
+++ b/src/assets/scss/override/_slider.scss
@@ -1,7 +1,9 @@
 .myslider {
+  background:url(../img/slider.png);
+  background-size:cover;
   width:100%;
   height:720px;
-  background:red;
+
   position: absolute;
   top: 0;
   z-index:1;
@@ -13,4 +15,16 @@
     h3 {
       font-size: 21px;
     }
+}
+
+
+
+@media screen and (max-width: 640px) {
+
+.myslider {
+
+  height:850px;
+
+}
+
 }
