--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="large-4 columns"><label for="mail">INSCRIVEZ-VOUS À LA NEWSLETTER DES MUSÉES !</label></div>
     <div class="large-4 columns"><input type="email" id="mail"></div>
-    <div class="large-4 columns"> <a href="">Publication des musées</a> | <a href="">Espace presse</a>  </div>
+    <div class="large-4 columns"> <a href="">PUBLICATION DES MUSÉES</a> | <a href="">ESPACE PRESSE</a>  </div>
 
   </div>
   <div class="row">
@@ -10,7 +10,7 @@
       <a href="">ACCUEIL</a> |
       <a href="">CONTACT</a> |
       <a href="">PLAN DU SITE</a> |
-      <a href="">MENTIONS LéGALES</a>
+      <a href="">MENTIONS LÉGALES</a>
     </nav>
 </div>
 </footer>
