--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="row">
     <div class="large-4 columns"><label for="mail">INSCRIVEZ-VOUS À LA NEWSLETTER DES MUSÉES !</label></div>
-    <div class="large-4 columns"><input type="email" id="mail"></div>
+    <div class="large-4 columns"><input type="email" id="mail" placeholder ="E-mail"><input type="submit" class="button" value="OK"></div>
     <div class="large-4 columns"> <a href="">PUBLICATION DES MUSÉES</a> | <a href="">ESPACE PRESSE</a>  </div>
 
   </div>
